fix: force scroll on x overflow in pre

--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -23,6 +23,7 @@
     pre {
         margin: 1.5em 0em;
         line-height: 1.4em;
+        overflow-x: scroll;
     }
     
     h1, h2, h3, h4, h5, h6 {
